--- a/website/.env.development
+++ b/website/.env.development
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_MAIN_DOMAIN=https://mana.cr38te.dev
-NEXT_PUBLIC_API_URL=https://cms.mana.cr38te.dev
+NEXT_PUBLIC_MAIN_DOMAIN=https://manaruba.org
+NEXT_PUBLIC_API_URL=https://cms.manaruba.org
 NEXT_PUBLIC_API_NAMESPACE=mana-custom
 NEXT_PUBLIC_API_VERSION=v1
 NEXT_PUBLIC_GA_TRACKING_ID=
 NEXT_PUBLIC_GOOGLE_RECAPTCHA_CLIENT_CODE=6Lf9XekiAAAAAPznf94YbUAQOEWSedcWbHePR--p
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAxTgeNNj0KY_DxPQq5oUwHgKWZMxfFX6A
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBCm93ldhOR3-KzuzJqKSqYyFp0VgIrErE
 
